added navbar to home

--- a/home.html
+++ b/home.html
@@ -22,7 +22,7 @@
   <body>
     <!-- Navbar -->
     <nav
-      class="navbar navbar-expand-lg navbar-light bg-light shadow p-3 mb-5 bg-white rounded"
+      class="navbar navbar-expand-lg navbar-light bg-dblue shadow p-3 mb-5 bg-white rounded"
     >
       <a class="navbar-brand" href="#">Navbar</a>
       <button
