--- a/OrphanageProfile.html
+++ b/OrphanageProfile.html
@@ -104,29 +104,41 @@
         <!-- about -->
         <div class="container about-container">
           <div class="row">
-            <div class="col-lg-6 shadow pt-3 pb-3 mb-5 bg-white rounded">
-              <h1 class="display-4">About</h1>
-              <p>
-                Lorem Ipsum is simply dummy text of the printing and typesetting
-                industry. Lorem Ipsum has been the industry's standard dummy
-                text ever since the 1500s, when an unknown printer took a galley
-                of type and scrambled it to make a type specimen book. It has
-                survived not only five centuries, but also the leap into
-                electronic typesetting, remaining essentially unchanged. It was
-                popularised in the 1960s with the release of Letraset sheets
-                containing Lorem Ipsum passages, and more recently with desktop
-                publishing software like Aldus PageMaker including versions of
-                Lorem Ipsum.
-              </p>
+            <div class="col-lg-6">
+              <div class="card shadow pt-3 pb-3 mb-5 bg-white rounded">
+                <div class="card-body">
+                  <h5 class="card-title">About</h5>
+                  <p class="card-text">
+                    Lorem Ipsum is simply dummy text of the printing and
+                    typesetting industry. Lorem Ipsum has been the industry's
+                    standard dummy text ever since the 1500s, when an unknown
+                    printer took a galley of type and scrambled it to make a
+                    type specimen book. It has survived not only five centuries,
+                    but also the leap into electronic typesetting, remaining
+                    essentially unchanged. It was popularised in the 1960s with
+                    the release of Letraset sheets containing Lorem Ipsum
+                    passages, and more recently with desktop publishing software
+                    like Aldus PageMaker including versions of Lorem Ipsum.
+                  </p>
+                  <a href="#" class="btn btn-primary">Go somewhere</a>
+                </div>
+              </div>
             </div>
-            <div class="col-lg-6 shadow pt-3 pb-3 mb-5 bg-white rounded">
-              <h1 class="display-4">Details</h1>
-              <p>Care Taker : Mr.X</p>
-              <p>No of Children : 10</p>
-              <p>Care Taker Number : +91 123456789</p>
+            <div class="col-lg-6">
+              <div class="card shadow pt-3 pb-3 mb-5 bg-white rounded">
+                <div class="card-body">
+                  <h5 class="card-title">Details</h5>
+                  <p class="card-text">Care Taker : Mr. X</p>
+                  <p class="card-text">No of Children : 25</p>
+                  <p class="card-text">Ph No : 044-123456</p>
+                  <p class="card-text">Email : abc@gmail.com</p>
+                  <p class="card-text">Website : www.orphanage.in</p>
+                </div>
+              </div>
             </div>
           </div>
         </div>
+        <!-- Requirements list -->
       </div>
     </div>
     <!-- Option 1: jQuery and Bootstrap Bundle (includes Popper) -->
