--- a/OrphanageProfile.html
+++ b/OrphanageProfile.html
@@ -139,6 +139,32 @@
           </div>
         </div>
         <!-- Requirements list -->
+        <div class="container requirements-list-container">
+          <div class="row">
+            <h4 class="ml-3 mb-3">Requirements List</h4>
+            <div class="col-sm-12">
+              <div class="card shadow p-3 mb-5 bg-white rounded">
+                <div class="card-body">
+                  <h5 class="card-title">Clothes</h5>
+                  <p class="card-text">asasasasaas</p>
+                  <a href="#" class="btn btn-primary">Go somewhere</a>
+                </div>
+              </div>
+            </div>
+            <div class="col-sm-12">
+              <div class="card shadow p-3 mb-5 bg-white rounded">
+                <div class="card-body">
+                  <h5 class="card-title">Stationaries</h5>
+                  <p class="card-text">
+                    With supporting text below as a natural lead-in to
+                    additional content.
+                  </p>
+                  <a href="#" class="btn btn-primary">Go somewhere</a>
+                </div>
+              </div>
+            </div>
+          </div>
+        </div>
       </div>
     </div>
     <!-- Option 1: jQuery and Bootstrap Bundle (includes Popper) -->
