donor side done

--- a/DonorHome.html
+++ b/DonorHome.html
@@ -26,7 +26,7 @@
       <nav
         class="navbar navbar-expand-lg navbar-light bg-dblue shadow p-3 mb-5 bg-white rounded"
       >
-        <a class="navbar-brand" href="#">ORL</a>
+        <a class="navbar-brand" href="donorHome.html">ORL</a>
         <button
           class="navbar-toggler"
           type="button"
@@ -94,7 +94,9 @@
                   Some quick example text to build on the card title and make up
                   the bulk of the card's content.
                 </p>
-                <a href="#" class="btn btn-primary">Go somewhere</a>
+                <a href="orphanageProfile.html" class="btn btn-primary"
+                  >View More Details</a
+                >
               </div>
             </div>
           </div>
@@ -111,7 +113,9 @@
                   Some quick example text to build on the card title and make up
                   the bulk of the card's content.
                 </p>
-                <a href="#" class="btn btn-primary">Go somewhere</a>
+                <a href="orphanageProfile.html" class="btn btn-primary"
+                  >View More Details</a
+                >
               </div>
             </div>
           </div>
@@ -128,7 +132,9 @@
                   Some quick example text to build on the card title and make up
                   the bulk of the card's content.
                 </p>
-                <a href="#" class="btn btn-primary">Go somewhere</a>
+                <a href="orphanageProfile.html" class="btn btn-primary"
+                  >View More Details</a
+                >
               </div>
             </div>
           </div>
@@ -145,7 +151,9 @@
                   Some quick example text to build on the card title and make up
                   the bulk of the card's content.
                 </p>
-                <a href="#" class="btn btn-primary">Go somewhere</a>
+                <a href="orphanageProfile.html" class="btn btn-primary"
+                  >View More Details</a
+                >
               </div>
             </div>
           </div>
@@ -162,7 +170,9 @@
                   Some quick example text to build on the card title and make up
                   the bulk of the card's content.
                 </p>
-                <a href="#" class="btn btn-primary">Go somewhere</a>
+                <a href="orphanageProfile.html" class="btn btn-primary"
+                  >View More Details</a
+                >
               </div>
             </div>
           </div>
@@ -179,7 +189,9 @@
                   Some quick example text to build on the card title and make up
                   the bulk of the card's content.
                 </p>
-                <a href="#" class="btn btn-primary">Go somewhere</a>
+                <a href="orphanageProfile.html" class="btn btn-primary"
+                  >View More Details</a
+                >
               </div>
             </div>
           </div>
