--- a/OrphanageProfile.html
+++ b/OrphanageProfile.html
@@ -27,7 +27,7 @@
       <nav
         class="navbar navbar-expand-lg navbar-light bg-dblue shadow p-3 mb-5 bg-white rounded"
       >
-        <a class="navbar-brand" href="#">ORL</a>
+        <a class="navbar-brand" href="donorHome.html">ORL</a>
         <button
           class="navbar-toggler"
           type="button"
